--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "start": "vite start"
   },
   "dependencies": {
+    "@convex-dev/react-query": "0.0.0-alpha.11",
     "@emotion/cache": "11.14.0",
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
     "@fontsource-variable/roboto": "5.2.5",
     "@mui/material": "6.4.7",
+    "@tanstack/react-query": "^5.84.2",
     "@tanstack/react-router": "^1.130.12",
     "@tanstack/react-router-devtools": "^1.130.13",
+    "@tanstack/react-router-with-query": "^1.130.17",
     "@tanstack/react-start": "^1.130.15",
+    "convex": "^1.25.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "zod": "^3.25.76"
