--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
     "@fontsource-variable/roboto": "5.2.5",
+    "@mui/icons-material": "^7.3.1",
     "@mui/material": "6.4.7",
     "@tanstack/react-query": "^5.84.2",
     "@tanstack/react-router": "^1.130.12",
